--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ dependencies {
 	compile 'org.apache.ddlutils:ddlutils:1.0'
 	compile 'org.apache.derby:derby:10.9.1.0'
     compile 'com.healthmarketscience.jackcess:jackcess:1.2.7'
-    testRuntime 'junit:junit:4.10'
+    testCompile 'junit:junit:4.10'
+	testCompile 'log4j:log4j:1.2.17'
 	testRuntime 'org.apache.ant:ant:1.8.4'
-	testRuntime 'log4j:log4j:1.2.17'
 }
 
