--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 
 version = 0.1
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
@@ -11,11 +11,9 @@ repositories {
 dependencies {
 	compile 'org.apache.ddlutils:ddlutils:1.0'
     compile 'com.healthmarketscience.jackcess:jackcess:1.2.10'
-    compile 'org.apache.ant:ant:1.9.0'
     testCompile 'junit:junit:4.11'
 	testCompile 'log4j:log4j:1.2.17'
-	testRuntime 'mysql:mysql-connector-java:5.1.24'
-    testRuntime 'mysql:mysql-connector-java:5.1.24'
+	testCompile 'mysql:mysql-connector-java:5.1.24'
 //    testRuntime fileTree (dir: "C:/Users/Kris/appengine-java-sdk/appengine-java-sdk-1.7.5/lib/impl", include: 'google_sql.jar')
 //    testRuntime fileTree (dir: "${System.getProperty('appengine.java.sdk')}/lib/impl", include: 'google_sql.jar')
 }
